# fodze-scout

./: index.html
.github/workflows/: iscout-tests.yml
ios-screening/: .gitignore  README.md  pyproject.toml
ios-screening/iscout/: __init__.py  __main__.py  backup.py  cli.py  console.py  engine.py  indicators.py  prep.py  report.py  utils.py
ios-screening/iscout/data/indicators/: README.md  jailbreak.json  paragon.json  pegasus.json  profiles_highrisk.json  stalkerware.json  triangulation.json
ios-screening/iscout/modules/: __init__.py  applications.py  base.py  configuration_profiles.py  device_info.py  filescan.py  network_usage.py  safari_history.py  shutdownlog.py  sms.py  tcc.py
ios-screening/samples/: make_test_backup.py
ios-screening/tests/: conftest.py  test_indicators.py  test_prep.py  test_review_fixes.py  test_robustness.py  test_scan.py  test_utils.py
